[project]
name = "cachepurger"
version = "0.3.1"
description = "Light-Weight Python Script and Executeable to Clear all Cache, Temp, Prefetch, flushes-dns and more to reserve space and speed up your windows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["nuitka>=2.7.16", "rich>=14.1.0"]
